fix: Add pre-wrap style to item contents

--- a/src/components/Item.scss
+++ b/src/components/Item.scss
@@ -53,6 +53,7 @@
 .item-contents {
   width: 100%;
   font-size: 20px;
+  white-space: pre-wrap;
 }
 
 .item-contents--cancel {
